@@ -1,18 +1,18 @@
 ScaleArea <- proto(ScaleSize, .tr = Trans$find("sqrt"), objname="area", icon=function(.) ScaleSize$icon(), details = "", doc = FALSE)
 
-ScaleSqrt <-     proto(ScaleContinuous, .tr = Trans$find("sqrt"),     objname = "sqrt", doc=FALSE, examples=function(.) {})
-ScaleLog10 <-    proto(ScaleContinuous, .tr = Trans$find("log10"),    objname = "log10", doc=FALSE, examples=function(.) {})
-ScalePow10 <-    proto(ScaleContinuous, .tr = Trans$find("pow10"),    objname = "pow10", doc=FALSE, examples=function(.) {})
-ScaleLog2 <-     proto(ScaleContinuous, .tr = Trans$find("log2"),     objname = "log2", doc=FALSE, examples=function(.) {})
-ScaleLog <-      proto(ScaleContinuous, .tr = Trans$find("log"),      objname = "log", doc=FALSE, examples=function(.) {})
-ScaleExp <-      proto(ScaleContinuous, .tr = Trans$find("exp"),      objname = "exp", doc=FALSE, examples=function(.) {})
-ScaleLogit <-    proto(ScaleContinuous, .tr = Trans$find("logit"),    objname = "logit", doc=FALSE, examples=function(.) {})
-ScaleReverse <-    proto(ScaleContinuous, .tr = Trans$find("reverse"),    objname = "reverse", doc=FALSE, examples=function(.) {})
-ScaleAsn <-      proto(ScaleContinuous, .tr = Trans$find("asn"),      objname = "asn", doc=FALSE, examples=function(.) {})
-ScaleProbit <-   proto(ScaleContinuous, .tr = Trans$find("probit"),   objname = "probit", doc=FALSE, examples=function(.) {})
-ScaleAtanh <-    proto(ScaleContinuous, .tr = Trans$find("atanh"),    objname = "atanh", doc=FALSE, examples=function(.) {})
-ScaleInverse <-  proto(ScaleContinuous, .tr = Trans$find("inverse"),  objname = "inverse", doc=FALSE, examples=function(.) {})
-ScaleContinuous$.tr <- Trans$find("identity")
+ScaleSqrt <-     proto(ScaleContinuous, tr_default = Trans$find("sqrt"),     objname = "sqrt", doc=FALSE, examples=function(.) {})
+ScaleLog10 <-    proto(ScaleContinuous, tr_default = Trans$find("log10"),    objname = "log10", doc=FALSE, examples=function(.) {})
+ScalePow10 <-    proto(ScaleContinuous, tr_default = Trans$find("pow10"),    objname = "pow10", doc=FALSE, examples=function(.) {})
+ScaleLog2 <-     proto(ScaleContinuous, tr_default = Trans$find("log2"),     objname = "log2", doc=FALSE, examples=function(.) {})
+ScaleLog <-      proto(ScaleContinuous, tr_default = Trans$find("log"),      objname = "log", doc=FALSE, examples=function(.) {})
+ScaleExp <-      proto(ScaleContinuous, tr_default = Trans$find("exp"),      objname = "exp", doc=FALSE, examples=function(.) {})
+ScaleLogit <-    proto(ScaleContinuous, tr_default = Trans$find("logit"),    objname = "logit", doc=FALSE, examples=function(.) {})
+ScaleReverse <-    proto(ScaleContinuous, tr_default = Trans$find("reverse"),    objname = "reverse", doc=FALSE, examples=function(.) {})
+ScaleAsn <-      proto(ScaleContinuous, tr_default = Trans$find("asn"),      objname = "asn", doc=FALSE, examples=function(.) {})
+ScaleProbit <-   proto(ScaleContinuous, tr_default = Trans$find("probit"),   objname = "probit", doc=FALSE, examples=function(.) {})
+ScaleAtanh <-    proto(ScaleContinuous, tr_default = Trans$find("atanh"),    objname = "atanh", doc=FALSE, examples=function(.) {})
+ScaleInverse <-  proto(ScaleContinuous, tr_default = Trans$find("inverse"),  objname = "inverse", doc=FALSE, examples=function(.) {})
+ScaleContinuous$tr_default <- Trans$find("identity")
 
 ScaleProb <- proto(ScaleContinuous, {
   objname <- "prob"
