@@ -82,21 +82,6 @@ scale_x_prob <- ScaleProb$build_accessor(c(variable = "\"x\""))
 scale_x_probit <- ScaleProbit$build_accessor(c(variable = "\"x\""))
 scale_x_reverse <- ScaleReverse$build_accessor(c(variable = "\"x\""))
 scale_x_sqrt <- ScaleSqrt$build_accessor(c(variable = "\"x\""))
-scale_xend_asn <- ScaleAsn$build_accessor(c(variable = "\"xend\""))
-scale_xend_atanh <- ScaleAtanh$build_accessor(c(variable = "\"xend\""))
-scale_xend_continuous <- ScaleContinuous$build_accessor(c(variable = "\"xend\""))
-scale_xend_exp <- ScaleExp$build_accessor(c(variable = "\"xend\""))
-scale_xend_inverse <- ScaleInverse$build_accessor(c(variable = "\"xend\""))
-scale_xend_log <- ScaleLog$build_accessor(c(variable = "\"xend\""))
-scale_xend_log10 <- ScaleLog10$build_accessor(c(variable = "\"xend\""))
-scale_xend_log2 <- ScaleLog2$build_accessor(c(variable = "\"xend\""))
-scale_xend_logit <- ScaleLogit$build_accessor(c(variable = "\"xend\""))
-scale_xend_pow <- ScalePow$build_accessor(c(variable = "\"xend\""))
-scale_xend_pow10 <- ScalePow10$build_accessor(c(variable = "\"xend\""))
-scale_xend_prob <- ScaleProb$build_accessor(c(variable = "\"xend\""))
-scale_xend_probit <- ScaleProbit$build_accessor(c(variable = "\"xend\""))
-scale_xend_reverse <- ScaleReverse$build_accessor(c(variable = "\"xend\""))
-scale_xend_sqrt <- ScaleSqrt$build_accessor(c(variable = "\"xend\""))
 scale_y_asn <- ScaleAsn$build_accessor(c(variable = "\"y\""))
 scale_y_atanh <- ScaleAtanh$build_accessor(c(variable = "\"y\""))
 scale_y_continuous <- ScaleContinuous$build_accessor(c(variable = "\"y\""))
@@ -114,21 +99,6 @@ scale_y_prob <- ScaleProb$build_accessor(c(variable = "\"y\""))
 scale_y_probit <- ScaleProbit$build_accessor(c(variable = "\"y\""))
 scale_y_reverse <- ScaleReverse$build_accessor(c(variable = "\"y\""))
 scale_y_sqrt <- ScaleSqrt$build_accessor(c(variable = "\"y\""))
-scale_yend_asn <- ScaleAsn$build_accessor(c(variable = "\"yend\""))
-scale_yend_atanh <- ScaleAtanh$build_accessor(c(variable = "\"yend\""))
-scale_yend_continuous <- ScaleContinuous$build_accessor(c(variable = "\"yend\""))
-scale_yend_exp <- ScaleExp$build_accessor(c(variable = "\"yend\""))
-scale_yend_inverse <- ScaleInverse$build_accessor(c(variable = "\"yend\""))
-scale_yend_log <- ScaleLog$build_accessor(c(variable = "\"yend\""))
-scale_yend_log10 <- ScaleLog10$build_accessor(c(variable = "\"yend\""))
-scale_yend_log2 <- ScaleLog2$build_accessor(c(variable = "\"yend\""))
-scale_yend_logit <- ScaleLogit$build_accessor(c(variable = "\"yend\""))
-scale_yend_pow <- ScalePow$build_accessor(c(variable = "\"yend\""))
-scale_yend_pow10 <- ScalePow10$build_accessor(c(variable = "\"yend\""))
-scale_yend_prob <- ScaleProb$build_accessor(c(variable = "\"yend\""))
-scale_yend_probit <- ScaleProbit$build_accessor(c(variable = "\"yend\""))
-scale_yend_reverse <- ScaleReverse$build_accessor(c(variable = "\"yend\""))
-scale_yend_sqrt <- ScaleSqrt$build_accessor(c(variable = "\"yend\""))
 scale_z_asn <- ScaleAsn$build_accessor(c(variable = "\"z\""))
 scale_z_atanh <- ScaleAtanh$build_accessor(c(variable = "\"z\""))
 scale_z_continuous <- ScaleContinuous$build_accessor(c(variable = "\"z\""))
