@@ -51,18 +51,6 @@
 \alias{ScaleReverse}
 \alias{ScaleSizeDiscrete}
 \alias{ScaleSqrt}
-\alias{scale_xend_asn}
-\alias{scale_xend_atanh}
-\alias{scale_xend_exp}
-\alias{scale_xend_inverse}
-\alias{scale_xend_log}
-\alias{scale_xend_log10}
-\alias{scale_xend_log2}
-\alias{scale_xend_logit}
-\alias{scale_xend_pow10}
-\alias{scale_xend_probit}
-\alias{scale_xend_reverse}
-\alias{scale_xend_sqrt}
 \alias{scale_x_asn}
 \alias{scale_x_atanh}
 \alias{scale_x_exp}
@@ -75,18 +63,6 @@
 \alias{scale_x_probit}
 \alias{scale_x_reverse}
 \alias{scale_x_sqrt}
-\alias{scale_yend_asn}
-\alias{scale_yend_atanh}
-\alias{scale_yend_exp}
-\alias{scale_yend_inverse}
-\alias{scale_yend_log}
-\alias{scale_yend_log10}
-\alias{scale_yend_log2}
-\alias{scale_yend_logit}
-\alias{scale_yend_pow10}
-\alias{scale_yend_probit}
-\alias{scale_yend_reverse}
-\alias{scale_yend_sqrt}
 \alias{scale_y_asn}
 \alias{scale_y_atanh}
 \alias{scale_y_exp}
